# vcc-devops

./: Makefile.common  README.md  bootstrap.sh  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: placeholder.yml  python-pr-validate.yml
docs/: ONBOARDING_VALIDATION.md
scripts/: check-layer-imports.py
tests/: test_placeholder.py
